tests/transpiler/x/fortran/nested_function.error
error[I008]: cannot apply operator '+' to types null and null
  --> /workspace/mochi/tests/vm/valid/nested_function.mochi:3:14

  3 |     return x + y
    |              ^

help:
  Use compatible types for the operator.